--- a/partials/footer.ejs
+++ b/partials/footer.ejs
@@ -1,26 +1,16 @@
-<script>
-  let _0xf45f = [
-    "\x3C\x62\x72\x20\x2F\x3E\x20\x50\x6F\x77\x65\x72\x65\x64\x20\x62\x79\x20\x3C\x61\x20\x73\x74\x79\x6C\x65\x3D\x22\x74\x65\x78\x74\x2D\x64\x65\x63\x6F\x72\x61\x74\x69\x6F\x6E\x3A\x20\x6E\x6F\x6E\x65\x22\x20\x68\x72\x65\x66\x3D\x22\x68\x74\x74\x70\x73\x3A\x2F\x2F\x67\x69\x74\x68\x75\x62\x2E\x63\x6F\x6D\x2F\x7A\x61\x63\x68\x65\x79\x30\x31\x2F\x4D\x69\x6D\x69\x43\x4D\x53\x22\x20\x3E\x4D\x69\x6D\x69\x43\x4D\x53\x3C\x2F\x61\x20\x3E\x3C\x74\x69\x74\x6C\x65\x3E",
-  ];
-  let _0xef62 = [
-    "\x25\x33\x43\x25\x32\x46\x25\x37\x34\x25\x36\x39\x25\x37\x34\x25\x36\x43\x25\x36\x35\x25\x33\x45",
-  ];
-  let _0x2a89 = [
-    "\x25\x32\x36\x25\x36\x33\x25\x36\x46\x25\x37\x30\x25\x37\x39\x25\x33\x42\x25\x32\x30\x25\x34\x33\x25\x36\x46\x25\x37\x30\x25\x37\x39\x25\x37\x32\x25\x36\x39\x25\x36\x37\x25\x36\x38\x25\x37\x34\x25\x32\x30",
-  ];
-  document.getElementById("footer").innerHTML =
-    unescape(_0x2a89[0]) +
-    new Date().getFullYear() +
-    " <%= name %>" +
-    _0xf45f[0] +
-    "<%= name %>" +
-    unescape(_0xef62[0]);
-</script>
-
 <br />
 <div class="container-sm">
   <%- include('../partials/banners'); %>
-  <a href="/contacts" class="text-decoration-none font-monospace">Contacts</a>
   <br />
-  <a href="/privacy" class="text-decoration-none font-monospace">Privacy</a>
+  <a href="/contacts" class="text-decoration-none font-monospace">Контакты</a>
+  <br />
+  <a href="/privacy" class="text-decoration-none font-monospace"
+    >Политика конфиденциальности</a
+  >
+  <br />
+  © Copyright 2023 ShadowSeek<br />
+  Powered by
+  <a style="text-decoration: none" href="https://github.com/zachey01"
+    >MimiCMS</a
+  >
 </div>
