--- a/partials/header.ejs
+++ b/partials/header.ejs
@@ -39,7 +39,7 @@
         <ul class="dropdown-menu">
           <li>
             <a class="dropdown-item" href="profile"
-              >Profile
+              >Профиль
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
@@ -63,7 +63,7 @@
               class="btn btn-primary"
               data-bs-toggle="modal"
               data-bs-target="#exampleModal"
-              >Logout
+              >Выйти
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
@@ -109,7 +109,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Confirmation</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Подтверждение</h5>
           <button
             type="button"
             class="btn-close"
@@ -118,14 +118,14 @@
           ></button>
         </div>
         <div class="modal-body">
-          Are you sure you want to log out of your account?
+          Вы уверены, что хотите выйти из своей учетной записи?
         </div>
         <div class="modal-footer">
           <a href="/logout"
-            ><button type="button" class="btn btn-secondary">Logout</button></a
+            ><button type="button" class="btn btn-secondary">Выйти</button></a
           >
           <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
-            Exit
+            Отмена
           </button>
         </div>
       </div>
