--- a/partials/main-slides.ejs
+++ b/partials/main-slides.ejs
@@ -44,7 +44,7 @@
       data-bs-slide="prev"
     >
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
+      <span class="visually-hidden">Назад</span>
     </button>
     <button
       class="carousel-control-next"
@@ -53,7 +53,7 @@
       data-bs-slide="next"
     >
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
+      <span class="visually-hidden">Далее</span>
     </button>
   </div>
 </div>
