--- a/partials/nonAuth/header.ejs
+++ b/partials/nonAuth/header.ejs
@@ -24,7 +24,7 @@
     <div class="d-flex ml-auto">
       <a href="auth/steam" class="header-auth-btn">
         <button type="button" class="btn btn-dark">
-          Sign in<svg
+          Войти<svg
             xmlns="http://www.w3.org/2000/svg"
             width="20"
             height="20"
