--- a/partials/serverCard.ejs
+++ b/partials/serverCard.ejs
@@ -15,10 +15,10 @@
             <p class="card-text"><%= serverDescription %></p>
             <p class="card-text">
               <small class="text-muted"
-                >Current Map: <code><%= serverMap %></code></small
+                >Текущая карта: <code><%= serverMap %></code></small
               ><br />
               <small class="text-muted"
-                >Online:
+                >Онлайн:
                 <code
                   ><%= serverPlayerCountOnline %>/<%= serverPlayerCountMax
                   %></code
