--- a/views/contacts.ejs
+++ b/views/contacts.ejs
@@ -6,9 +6,30 @@
   <body class="container bg-slate-200">
     <header id="header"><%- include('../partials/header'); %></header>
     <main class="contact-info">
-      <p><code>E-mail: </code>email@example.com</p>
-      <p><code>Telegram: </code>@<%= name %></p>
-      <p><code>Steam: </code>@<%= name %></p>
+      <p>
+        E-mail:
+        <a href="mailto:" class="text-decoration-none">shadow.seek@bk.ru</a>
+      </p>
+      <p>
+        Telegram:
+        <a href="https://t.me/shadowseekcsgo" class="text-decoration-none"
+          >@shadowseekcsgo</a
+        >
+      </p>
+      <p>
+        Steam:
+        <a
+          href="https://steamcommunity.com/groups/ShadowSeek"
+          class="text-decoration-none"
+          >@ShadowSeek</a
+        >
+      </p>
+      <p>
+        VK:
+        <a href="https://vk.com/shadowseek" class="text-decoration-none"
+          >@shadowseek</a
+        >
+      </p>
     </main>
     <footer id="footer" class="text-center text-muted">
       <%- include('../partials/footer'); %>
