--- a/views/products.ejs
+++ b/views/products.ejs
@@ -46,7 +46,7 @@
               });
             });
             function notEnoughBalance() {
-              alert("You don't have enough money to write off");
+              alert("У вас недостаточно денег для списания");
             }
           </script>
           <% }); %>
