--- a/views/tickets.ejs
+++ b/views/tickets.ejs
@@ -11,10 +11,12 @@
           <div class="col-md-6 mx-auto">
             <div class="card mt-5">
               <div class="card-body">
-                <h3 class="card-title text-center mb-4">Create a ticket</h3>
+                <h3 class="card-title text-center mb-4">Написать тикет</h3>
                 <form id="telegram-form">
                   <div class="form-group">
-                    <label for="message">Describe your problem</label>
+                    <label for="message"
+                      >Опишите вашу проблему/Нововведение</label
+                    >
                     <textarea
                       class="form-control"
                       id="text"
@@ -24,7 +26,7 @@
                     ></textarea>
                   </div>
                   <button type="submit" class="btn btn-primary btn-block mt-4">
-                    Send
+                    Отправить
                   </button>
                 </form>
               </div>
@@ -44,7 +46,7 @@
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title" id="successModalLabel">
-                Successfully sent
+                Успешно отправлено!
               </h5>
               <a href="">
                 <button
@@ -69,7 +71,7 @@
               </a>
             </div>
             <div class="modal-body">
-              <p>Your message was successfully sent</p>
+              <p>Ваше сообщение успешно отправлено</p>
             </div>
           </div>
         </div>
