--- a/partials/banners.ejs
+++ b/partials/banners.ejs
@@ -1,9 +1,9 @@
-<div class="container-sm text-center">
+<div class="container-sm text-center banners">
   <a href="<%= discordServerLink %>"
     ><svg
       xmlns="http://www.w3.org/2000/svg"
-      width="20"
-      height="20"
+      width="35"
+      height="35"
       fill="currentColor"
       class="bi bi-discord"
       viewBox="0 0 16 16"
@@ -15,8 +15,8 @@
   <a href="<%= tgChannelLink %>"
     ><svg
       xmlns="http://www.w3.org/2000/svg"
-      width="20"
-      height="20"
+      width="35"
+      height="35"
       fill="currentColor"
       class="bi bi-telegram"
       viewBox="0 0 16 16"
