--- a/partials/head.ejs
+++ b/partials/head.ejs
@@ -3,6 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="icon" type="image/x-icon" href="<%= logo %>" />
 <link rel="stylesheet" href="css/main.css" />
+<title>ShadowSeek</title>
 
 <link rel="stylesheet" href="libs/bootstrap-5.3.0-dist/css/bootstrap.min.css" />
 <script src="libs/bootstrap-5.3.0-dist/js/bootstrap.bundle.min.js"></script>
