--- a/partials/modules/headerBtn.ejs
+++ b/partials/modules/headerBtn.ejs
@@ -6,7 +6,7 @@
         href="shop"
         role="button"
         aria-expanded="false"
-        title="Shop"
+        title="Магазин"
         ><svg
           xmlns="http://www.w3.org/2500/svg"
           width="25"
@@ -22,7 +22,7 @@
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="tickets" title="Support"
+      <a class="nav-link" href="tickets" title="Тикеты"
         ><svg
           xmlns="http://www.w3.org/2500/svg"
           width="25"
@@ -41,7 +41,7 @@
     </li>
 
     <li class="nav-item">
-      <a class="nav-link" href="rules" title="Rules"
+      <a class="nav-link" href="rules" title="Правила"
         ><svg
           xmlns="http://www.w3.org/2000/svg"
           width="25"
@@ -56,6 +56,24 @@
           />
           <path
             d="M9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.5L9.5 0zm0 1v2A1.5 1.5 0 0 0 11 4.5h2V14a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h5.5z"
+          /></svg
+      ></a>
+    </li>
+
+    <li class="nav-item">
+      <a class="nav-link" href="#" title="Предпросмотрт карт"
+        ><svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="25"
+          height="25"
+          class="header-icon"
+          fill="currentColor"
+          class="bi bi-image"
+          viewBox="0 0 16 16"
+        >
+          <path d="M6.002 5.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z" />
+          <path
+            d="M2.002 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2h-12zm12 1a1 1 0 0 1 1 1v6.5l-3.777-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12V3a1 1 0 0 1 1-1h12z"
           /></svg
       ></a>
     </li>
