--- a/views/nonAuth404.ejs
+++ b/views/nonAuth404.ejs
@@ -97,11 +97,11 @@
         })();
 
         var phrases = [
-          "Not Found",
+          "Не найдено",
           "404",
           "40",
           "4",
-          "Not Found",
+          "Не найдено",
           "4",
           "40",
           "404",
