--- a/views/rules.ejs
+++ b/views/rules.ejs
@@ -6,10 +6,126 @@
   <body class="container bg-slate-200">
     <header id="header"><%- include('../partials/header'); %></header>
     <main>
-      <h1 class="text-center">📄 Rules 📄</h1>
+      <h1 class="text-center">📄 Правила 📄</h1>
       <br />
-      <code>1.</code> your rules
-    </main>стрируемом сервере
+      <br /><br />
+      <h4>1. Общие положения:</h4>
+      <br /><code>1.1</code> Заходя на сервер, вы соглашаетесь с данными
+      правилами и обязуетесь их исполнять.<br /><code>1.2</code> За выполнением
+      правил следят администраторы (админы) - люди, наделенные особыми правами и
+      привилегиями на сервере, однако имеющие при этом вполне определенные
+      обязанности и подчиняющиеся так же особым правилам.<br /><code>1.3</code>
+      Настоящие правила обязан выполнять любой игрок, зашедший на сервер (в т.ч.
+      администраторы, управляющие, кураторы серверов и администраторы игрового
+      портала)<br /><code>1.4</code> Незнание Правил не только не освобождает
+      Вас от ответственности за их нарушение, но и само по себе является
+      нарушением и отягчающим вину обстоятельством.<br /><code>1.5</code> Любое
+      нарушение настоящих правил администратором является основанием для лишения
+      его прав.<br /><br />
+      <h4>2. Игрокам запрещено:</h4>
+      <br /><code>2.1</code> Запрещено использование всякого рода читов, в том
+      числе с целью тестирования самого чита или античитерской программы, а так
+      же использование различных скриптов в конфиге, дающие явные преимущества
+      над другими игроками.<br />Наказание: бан навсегда<br /><code>2.2</code>
+      Запрещено оскорбление игроков в т.ч. нецензурной бранью, злоупотребление
+      нецензурными выражениями в чате и при использовании микрофона (оскорбления
+      игроков запрещены в любой форме, выражение эмоций посредством нецензурных
+      выражений допустимо в разумных пределах, устанавливаемых присутствующим
+      админом). Публикация заведомо ложной информации, любого материала, который
+      является сознательно ложным и/или дискредитирующим, неточным, несущим
+      ненависть, сексуально ориентированным или являющимся нарушением любого
+      закона РФ.<br />Наказание: кик -> бан до 3х дней<br /><code>2.3</code>
+      Запрещено оскорбление родителей и родственников игрока другим игроком в
+      любой форме (голос, чат, ник)<br />Наказание: бан навсегда<br /><code
+        >2.4</code
+      >
+      Запрещена любая реклама (в чате, голосовыми сообщениями, в имени
+      игроков)<br />Наказание: по решению администратора, в зависимости от
+      нарушения (от требования прекратить рекламу до бана навсегда.<br /><code
+        >2.5</code
+      >
+      Запрещено многократное повторение одной и той же фразы (flood), а так же
+      при использовании микрофона, захламлять эфир музыкой или иными
+      посторонними звуками.<br />Наказание: кик -> бан до 1 дня<br /><code
+        >2.6</code
+      >
+      Запрещено обсуждать действия админа во время игрового процесса.<br />Наказание:
+      кик -> бан до 3х дней<br /><code>2.7</code> Запрещено препятствовать и
+      мешать игрокам своей команды (толкаться, ослеплять и т.д.)<br />Наказание:
+      кик -> бан до 1 дня<br /><code>2.8</code> Запрещено отклонение от
+      выполнения задания , в т.ч. злостное кемперство, ситуация, когда игрок
+      спрятался в телепорте и ждет, пока противник пробежит мимо, а так же
+      осуществления действий, не относящихся к целям игры (например простой на
+      респауне).<br />Наказание: кик -> бан на сутки<br /><code>2.9</code>
+      Запрещено использование багов карт, в т.ч. для просмотра игрового
+      пространства карты поверх текстур.<br />Наказание: кик<br /><code
+        >2.10</code
+      >
+      Запрещено обходить баны любыми способами (вместо этого необходимо подавать
+      апелляцию на сайте).<br /><br /><b
+        >ЗАХОД НА СЕРВЕР ДО РАЗБАНА влечет отказ в рассмотрении апелляции!</b
+      ><br />Наказание: бан навсегда - без возможности подать апелляцию!<br /><code
+        >2.11</code
+      >
+      Запрещен любой мониторинг - явное (в чат или микрофон) или неявное
+      (сторонние голосовые чаты) сообщение игроку своей команды местоположения и
+      действий игроков противника.<br />Наказание: кик -> бан до 1 дня<br /><br />
+      <h4>3. Игрокам разрешено:</h4>
+      <br />3.1 Разрешено делать подсадки (кроме мест, позволяющих использовать
+      баг карты)<br />3.2 Разрешено прокидывать гранаты через текстуры над
+      зданиями и стенами<br />3.3 Разрешено писать любым игрокам в чат и
+      общаться через микрофон в пределах установленных данными правилами<br />3.4
+      Разрешено оставить жалобу на любого администратора, либо игрока
+      подозреваемого в использовании читов, а так же апеллировать свой бан на
+      сайте, оставив заявку по установленным формам.<br /><br />
+      <h4>4. Правила для администраторов сервера:</h4>
+      <br /><code>4.1</code> Назначается после рассмотрения Координатором
+      сервера поданной заявки<br /><code>4.2</code> Обязан поддерживать порядок
+      на сервере и строгое выполнение правил всеми игроками<br /><code
+        >4.3</code
+      >
+      При наличии микрофона обязан его использовать<br /><code>4.4</code> Имеет
+      право наказать игрока в случаях, описанных в правилах игрового сервера,
+      где он является администратором<br /><code>4.5</code> Не имеет права
+      оскорблять и унижать игроков<br /><code>4.6</code> Не обязан объяснять
+      причины наказания игрокам, при этом не обязан что-либо доказывать (все
+      обсуждения должны производиться на форуме или в личной переписке). Обязан
+      зафиксировать грубое нарушения игрока в виде скриншота / демо видео и при
+      апелляции предоставить в соответствующей теме на форуме<br /><code
+        >4.7</code
+      >
+      Не обязан выслушивать объяснения или какие-либо доказательства на
+      сервере<br /><code>4.8</code> Не имеет права использовать инструменты
+      администрирования сервером в личных или развлекательных целях<br /><code
+        >4.9</code
+      >
+      Администратор не имеет права менять карту без предварительного голосования
+      и не имеет права менять карту на другую после завершенного голосования
+      игроков<br /><code>4.10</code> Применять свои администраторские полномочия
+      может под любым другим ником для выявления нарушений<br /><code
+        >4.11</code
+      >
+      В случае, если происходит ситуация, не описанная в правилах, Администратор
+      имеет право принять решение, которое считает правильным и этичным<br /><code
+        >4.12</code
+      >
+      Не имеет права передавать свои администраторские полномочия другому
+      лицу<br /><code>4.13</code> Администратор обязан быть объективным в
+      решении споров между игроками, оценке ситуации и применения своих
+      полномочий<br /><code>4.14</code> Обязан посещать форум для своевременного
+      реагирования на подданные на его баны апелляции<br /><code>4.15</code> В
+      случае злоупотребления своим положением Администратор получает
+      предупреждение, или же исключается из рядов Администраторов, также может
+      получить бан на срок от 7 дней до перманента.<br /><code>4.16</code> В
+      случае нарушения данных правил, уличения в использовании читов,
+      систематических нарушений правил серверов в игре и неадекватного поведения
+      на игровых серверах и форуме исключается из рядов администрации с
+      последующим получением перманентной блокировки на портале<br /><code
+        >4.17</code
+      >
+      Обязан предоставить доказательства нарушения правил игроком при подаче
+      апелляции в течение 24 часов<br /><code>4.18</code> Обязан регулярно
+      поддерживать свой онлайн на администрируемом сервере<br />
     </main>
     <footer id="footer" class="text-center text-muted">
       <%- include('../partials/footer'); %>
