--- a/partials/modules/headerBtn.ejs
+++ b/partials/modules/headerBtn.ejs
@@ -61,7 +61,7 @@
     </li>
 
     <li class="nav-item">
-      <a class="nav-link" href="#" title="Предпросмотрт карт"
+      <a class="nav-link" href="/mapViewer" title="Предпросмотрт карт"
         ><svg
           xmlns="http://www.w3.org/2000/svg"
           width="25"
