--- a/partials/main-slides.ejs
+++ b/partials/main-slides.ejs
@@ -27,15 +27,18 @@
       ></button>
     </div>
     <div class="carousel-inner">
-      <div class="carousel-item active rounded">
-        <img src="<%= slide_1 %>" class="d-block w-100" alt="..." />
-      </div>
-      <div class="carousel-item rounded">
-        <img src="<%= slide_2 %>" class="d-block w-100" alt="..." />
-      </div>
-      <div class="carousel-item rounded">
-        <img src="<%= slide_3 %>" class="d-block w-100" alt="..." />
-      </div>
+      <a href="/shop">
+        <div class="carousel-item active rounded">
+          <img src="<%= slide_1 %>" class="d-block w-100" alt="..." /></div
+      ></a>
+      <a href="/tickets">
+        <div class="carousel-item rounded">
+          <img src="<%= slide_2 %>" class="d-block w-100" alt="..." /></div
+      ></a>
+      <a href="/mapViewer">
+        <div class="carousel-item rounded">
+          <img src="<%= slide_3 %>" class="d-block w-100" alt="..." /></div
+      ></a>
     </div>
     <button
       class="carousel-control-prev"
