--- a/partials/main-slides.ejs
+++ b/partials/main-slides.ejs
@@ -35,10 +35,10 @@
         <div class="carousel-item rounded">
           <img src="<%= slide_2 %>" class="d-block w-100" alt="..." /></div
       ></a>
-      <a href="/mapViewer">
+      <!-- <a href="/mapViewer">
         <div class="carousel-item rounded">
           <img src="<%= slide_3 %>" class="d-block w-100" alt="..." /></div
-      ></a>
+      ></a> -->
     </div>
     <button
       class="carousel-control-prev"
