--- a/partials/nonAuth/header.ejs
+++ b/partials/nonAuth/header.ejs
@@ -1,5 +1,5 @@
 <nav
-  class="navbar navbar-expand-lg bg-body-tertiary bg-white rounded shadow-lg"
+  class="navbar navbar-expand-lg bg-body-tertiary rounded shadow-lg bg-black"
 >
   <div class="container-fluid">
     <%- include('../modules/headerLogo.ejs'); %>
