--- a/partials/modules/headerBtn.ejs
+++ b/partials/modules/headerBtn.ejs
@@ -14,9 +14,9 @@
 
       <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
         <li><a class="dropdown-item" href="/shop">Все</a></li>
-        <li><a class="dropdown-item" href="/shop:models">Модельки</a></li>
+        <li><a class="dropdown-item" href="/shopModels">Модельки</a></li>
         <li>
-          <a class="dropdown-item" href="/shop:privilege">Привилегии</a>
+          <a class="dropdown-item" href="/shopPrivilege">Привилегии</a>
         </li>
       </ul>
     </li>
