--- a/views/products.ejs
+++ b/views/products.ejs
@@ -24,7 +24,7 @@
                     class="btn btn-sm btn-outline-secondary"
                     onclick="notEnoughBalance()"
                   >
-                    Buy
+                    Купить
                   </button>
                   <% } else { %>
                   <button
@@ -32,7 +32,7 @@
                     id="buyBtn<%= product.id %>"
                     data-id="<%= product.id %>"
                   >
-                    Buy
+                    Купить
                   </button>
                   <% } %>
                 </div>
