--- a/views/admin-main.ejs
+++ b/views/admin-main.ejs
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="css/admin.css" />
     <%- include('../partials/head'); %>
   </head>
   <body class="bg-slate-200">
     <header id="header"><%- include('../partials/admin/header'); %></header>
-    <main></main>
-
-    <footer id="footer" class="text-center text-muted">
-      <%- include('../partials/footer'); %>
-    </footer>
+    <main>
+      <h3 class="text-center">Основные настройки</h3>
+    </main>
   </body>
 </html>
