--- a/partials/footer.ejs
+++ b/partials/footer.ejs
@@ -8,6 +8,10 @@
     >Политика конфиденциальности</a
   >
   <br />
+  <a href="/oferts" class="text-decoration-none font-monospace"
+    >Договор оферты</a
+  >
+  <br />
   © Copyright 2023 ShadowSeek<br />
   Powered by
   <a style="text-decoration: none" href="https://github.com/zachey01"
