--- a/views/balance.ejs
+++ b/views/balance.ejs
@@ -11,38 +11,22 @@
           <div class="col-md-6">
             <div class="card">
               <div class="card-header">
-                <h4 class="mb-0">Credit Card</h4>
+                <h4 class="mb-0">Пополнение баланса</h4>
               </div>
               <div class="card-body">
                 <form>
                   <div class="form-group">
-                    <label for="cardNumber">Card number</label>
+                    <label for="cardNumber">Сумма</label>
                     <input
                       type="text"
                       class="form-control"
                       id="cardNumber"
-                      placeholder="Enter card number"
+                      placeholder="Введите сумму пополнения"
                     />
                   </div>
-                  <div class="form-group">
-                    <label for="expiryDate">Expiry date</label>
-                    <input
-                      type="text"
-                      class="form-control"
-                      id="expiryDate"
-                      placeholder="MM/YY"
-                    />
-                  </div>
-                  <div class="form-group">
-                    <label for="cvv">CVV</label>
-                    <input
-                      type="password"
-                      class="form-control"
-                      id="cvv"
-                      placeholder="Enter CVV"
-                    />
-                  </div>
-                  <button type="submit" class="btn btn-primary">Pay Now</button>
+                  <button type="submit" class="btn btn-primary">
+                    Пополнить
+                  </button>
                 </form>
               </div>
             </div>
@@ -50,7 +34,7 @@
           <div class="col-md-6">
             <div class="card">
               <div class="card-header">
-                <h4 class="mb-0">PayPal</h4>
+                <h4 class="mb-0">Задания</h4>
               </div>
               <div class="card-body">
                 <p>Click the button below to pay with PayPal.</p>
