--- a/partials/head.ejs
+++ b/partials/head.ejs
@@ -1,9 +1,22 @@
 <meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="icon" type="image/x-icon" href="<%= logo %>" />
+<link rel="icon" type="image/x-icon" href="favicon.ico" />
 <link rel="stylesheet" href="css/main.css" />
 <title>ShadowSeek</title>
-
 <link rel="stylesheet" href="libs/bootstrap-5.3.0-dist/css/bootstrap.min.css" />
-<script src="libs/bootstrap-5.3.0-dist/js/bootstrap.bundle.min.js"></script>
+<script
+  src="libs/bootstrap-5.3.0-dist/js/bootstrap.bundle.min.js"
+  async
+></script>
+<meta name="designer" content="Zachey" />
+<meta name="copyright" content="ShadowSeek" />
+<meta name="reply-to" content="admin@shadowseek.ru" />
+<meta name="url" content="https://shadowseek.ru" />
+<meta name="identifier-URL" content="https://shadowseek.ru" />
+
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<meta content="yes" name="apple-touch-fullscreen" />
+<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+<meta name="format-detection" content="telephone=no" />
+<meta name="description" content="Один из лучших HNS серверов CS:GO!" />
