--- a/partials/head.ejs
+++ b/partials/head.ejs
@@ -20,3 +20,4 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 <meta name="format-detection" content="telephone=no" />
 <meta name="description" content="Один из лучших HNS серверов CS:GO!" />
+<link rel="dns-prefetch" href="https://fonts.gstatic.com" />
