--- a/partials/head.ejs
+++ b/partials/head.ejs
@@ -1,7 +1,7 @@
 <meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="icon" type="image/x-icon" href="favicon.ico" />
+<link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
 <link rel="stylesheet" href="css/main.css" />
 <title>ShadowSeek</title>
 <link rel="stylesheet" href="libs/bootstrap-5.3.0-dist/css/bootstrap.min.css" />
@@ -10,6 +10,7 @@
   async
 ></script>
 <meta name="designer" content="Zachey" />
+<meta name="developer" content="Zachey" />
 <meta name="copyright" content="ShadowSeek" />
 <meta name="reply-to" content="admin@shadowseek.ru" />
 <meta name="url" content="https://shadowseek.ru" />
