correct svg icons

--- a/src/partials/modules/headerBtn.ejs
+++ b/src/partials/modules/headerBtn.ejs
@@ -8,7 +8,7 @@
         id="dropdownMenuLink"
         data-bs-toggle="dropdown"
         aria-expanded="false"
-        src="img/shop.svg"
+        src="img/icon/shop.svg"
         alt=""
       />
 
@@ -21,60 +21,45 @@
       </ul>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="tickets" title="Тикеты"
-        ><svg
-          xmlns="http://www.w3.org/2500/svg"
-          width="25"
-          height="25"
-          fill="currentColor"
+      <a class="nav-link" href="tickets" title="Тикеты">
+        <img
           class="header-icon"
-          viewBox="0 0 16 16"
-        >
-          <path
-            d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"
-          />
-          <path
-            d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.256 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"
-          /></svg
-      ></a>
+          href="#"
+          role="button"
+          id="dropdownMenuLink"
+          data-bs-toggle="dropdown"
+          aria-expanded="false"
+          src="img/icon/question.svg"
+          alt=""
+      /></a>
     </li>
 
     <li class="nav-item">
-      <a class="nav-link" href="rules" title="Правила"
-        ><svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="25"
-          height="25"
-          fill="currentColor"
+      <a class="nav-link" href="rules" title="Правила">
+        <img
           class="header-icon"
-          class="bi bi-file-earmark-text"
-          viewBox="0 0 16 16"
-        >
-          <path
-            d="M5.5 7a.5.5 0 0 0 0 1h5a.5.5 0 0 0 0-1h-5zM5 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5z"
-          />
-          <path
-            d="M9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.5L9.5 0zm0 1v2A1.5 1.5 0 0 0 11 4.5h2V14a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h5.5z"
-          /></svg
-      ></a>
+          href="#"
+          role="button"
+          id="dropdownMenuLink"
+          data-bs-toggle="dropdown"
+          aria-expanded="false"
+          src="img/icon/rules.svg"
+          alt=""
+      /></a>
     </li>
 
     <li class="nav-item">
-      <a class="nav-link" href="/mapViewer" title="Предпросмотрт карт"
-        ><svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="25"
-          height="25"
+      <a class="nav-link" href="/mapViewer" title="Предпросмотрт карт">
+        <img
           class="header-icon"
-          fill="currentColor"
-          class="bi bi-image"
-          viewBox="0 0 16 16"
-        >
-          <path d="M6.002 5.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z" />
-          <path
-            d="M2.002 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2h-12zm12 1a1 1 0 0 1 1 1v6.5l-3.777-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12V3a1 1 0 0 1 1-1h12z"
-          /></svg
-      ></a>
+          href="#"
+          role="button"
+          id="dropdownMenuLink"
+          data-bs-toggle="dropdown"
+          aria-expanded="false"
+          src="img/icon/image.svg"
+          alt=""
+      /></a>
     </li>
   </ul>
 </div>
