--- a/src/views/oferts.ejs
+++ b/src/views/oferts.ejs
@@ -227,7 +227,7 @@
       </p>
       <p class="has-line-data" data-line-start="86" data-line-end="89">
         Адрес почты:
-        <a href="mailto:admin@shadowseek.ru">admin@shadowseek.ru</a><br />
+        <a href="mailto:shadow.seek@bk.ru">shadow.seek@bk.ru</a><br />
         ВК группа: <a href="http://vk.com/shadowseek">vk.com/shadowseek</a
         ><br />
         Телеграм канал:
