--- a/src/partials/modules/headerBtn.ejs
+++ b/src/partials/modules/headerBtn.ejs
@@ -21,7 +21,7 @@
       </ul>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="tickets" title="Тикеты">
+      <a class="nav-link" href="/tickets" title="Тикеты">
         <img
           class="header-icon"
           href="#"
@@ -35,7 +35,7 @@
     </li>
 
     <li class="nav-item">
-      <a class="nav-link" href="rules" title="Правила">
+      <a class="nav-link" href="/rules" title="Правила">
         <img
           class="header-icon"
           href="#"
