--- a/src/partials/footer.ejs
+++ b/src/partials/footer.ejs
@@ -1,20 +1,94 @@
-<br />
-<div class="container-sm">
-  <%- include('../partials/banners'); %>
-  <br />
-  <a href="/contacts" class="text-decoration-none font-monospace">Контакты</a>
-  <br />
-  <a href="/privacy" class="text-decoration-none font-monospace"
-    >Политика конфиденциальности</a
+<!-- Footer -->
+<footer class="text-center text-lg-start text-muted">
+  <!-- Section: Social media -->
+  <section
+    class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
   >
-  <br />
-  <a href="/oferts" class="text-decoration-none font-monospace"
-    >Договор оферты</a
+    <div>
+      <a href="/links/discord" class="me-4">
+        <i class="fa-brands fa-discord fa-lg"></i>
+      </a>
+      <a href="/links/vk" class="me-4">
+        <i class="fa-brands fa-vk fa-xl"></i>
+      </a>
+      <a href="/links/tg" class="me-4">
+        <i class="fa-brands fa-telegram fa-xl"></i>
+      </a>
+      <a href="/links/youtube" class="me-4">
+        <i class="fa-brands fa-youtube fa-xl"></i>
+      </a>
+      <a href="/links/github" class="me-4">
+        <i class="fa-brands fa-github fa-xl"></i>
+      </a>
+    </div>
+
+    <!-- Right -->
+  </section>
+  <!-- Section: Social media -->
+
+  <!-- Section: Links  -->
+  <section class="">
+    <div class="container text-center text-md-start mt-5">
+      <!-- Grid row -->
+      <div class="row mt-3">
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+          <!-- Content -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            <i class="fa-solid fa-ghost me-3"></i>ShadowSeek
+          </h6>
+          <p>Выдающийся сервер CS:GO с режимом Hide and Seek (HAS)</p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+          <p>
+            <a href="/privacy" class="text-reset"
+              >Политика конфиденциальности</a
+            >
+          </p>
+          <p>
+            <a href="/contacts" class="text-reset">Контакты</a>
+          </p>
+          <p>
+            <a href="/oferts" class="text-reset">Договор оферты</a>
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+          <p>
+            <a href="/shop" class="text-reset">Магазин</a>
+          </p>
+          <p>
+            <a href="/tickets" class="text-reset">Тикеты</a>
+          </p>
+          <p>
+            <a href="/rules" class="text-reset">Правила</a>
+          </p>
+          <p>
+            <a href="/mapViewer" class="text-reset">Предпосмотр карт</a>
+          </p>
+        </div>
+        <!-- Grid column -->
+      </div>
+      <!-- Grid row -->
+    </div>
+  </section>
+  <!-- Section: Links  -->
+
+  <!-- Copyright -->
+  <div
+    class="text-center p-4 rounded-5"
+    style="background-color: rgba(0, 0, 0, 0.03)"
   >
-  <br />
-  © Copyright 2023 ShadowSeek<br />
-  Powered by
-  <a style="text-decoration: none" href="https://github.com/zachey01"
-    >MimiCMS</a
-  >
-</div>
+    © Copyright 2023 ShadowSeek<br />
+    Powered by
+    <a style="text-decoration: none" href="https://github.com/zachey01"
+      >MimiCMS</a
+    >
+  </div>
+  <!-- Copyright -->
+</footer>
