--- a/src/partials/main-slides.ejs
+++ b/src/partials/main-slides.ejs
@@ -1,8 +1,9 @@
-<div class="container-sm">
+<div class="container-fluid" style="display: inline-flex">
   <div
     id="carouselExampleIndicators"
     class="carousel slide rounded"
     data-bs-ride="true"
+    style="height: 320px; width: 1020px"
   >
     <div class="carousel-indicators">
       <button
@@ -59,4 +60,6 @@
       <span class="visually-hidden">Далее</span>
     </button>
   </div>
+
+  <h2><kbd><%= name %></kbd> - это один из лучших HNS CS:GO серверов.</h2>
 </div>
