--- a/src/views/privacy.ejs
+++ b/src/views/privacy.ejs
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <%- include('../partials/head'); %>
-    <link rel="stylesheet" href="css/docs.css" />
-  </head>
+  <head> </head>
   <body class="container bg-slate-200">
     <style></style>
     <body id="preview">
@@ -552,10 +549,6 @@
         <a href="https://shadowseek.ru/privacy">https://shadowseek.ru/privacy</a
         >.
       </p>
-      <script
-        data-cfasync="false"
-        src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"
-      ></script>
     </body>
   </body>
 </html>
