--- a/src/partials/head.ejs
+++ b/src/partials/head.ejs
@@ -1,18 +1,33 @@
+<link rel="dns-prefetch" href="https://fonts.gstatic.com" />
+<link rel="dns-prefetch" href="https://cdn.jsdelivr.net" />
 <meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
 <link rel="stylesheet" href="css/main.css" />
 <title>ShadowSeek</title>
-<link rel="stylesheet" href="libs/bootstrap-5.3.0-dist/css/bootstrap.min.css" />
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+  integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+  crossorigin="anonymous"
+/>
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+  integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+  crossorigin="anonymous"
+  referrerpolicy="no-referrer"
+/>
 <script
-  src="libs/bootstrap-5.3.0-dist/js/bootstrap.bundle.min.js"
-  async
+  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+  crossorigin="anonymous"
 ></script>
 <meta name="designer" content="Zachey" />
 <meta name="developer" content="Zachey" />
 <meta name="copyright" content="ShadowSeek" />
-<meta name="reply-to" content="admin@shadowseek.ru" />
+<meta name="reply-to" content="shadow.seek@bk.ru" />
 <meta name="url" content="https://shadowseek.ru" />
 <meta name="identifier-URL" content="https://shadowseek.ru" />
 
@@ -21,4 +36,3 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 <meta name="format-detection" content="telephone=no" />
 <meta name="description" content="Один из лучших HNS серверов CS:GO!" />
-<link rel="dns-prefetch" href="https://fonts.gstatic.com" />
