--- a/src/views/nonAuthcontacts.ejs
+++ b/src/views/nonAuthcontacts.ejs
@@ -8,7 +8,9 @@
     <main class="contact-info">
       <p>
         E-mail:
-        <a href="mailto:" class="text-decoration-none">shadow.seek@bk.ru</a>
+        <a href="mailto:shadow.seek@bk.ru" class="text-decoration-none"
+          >shadow.seek@bk.ru</a
+        >
       </p>
       <p>
         Telegram:
