--- a/src/views/tickets.ejs
+++ b/src/views/tickets.ejs
@@ -12,7 +12,7 @@
             <div class="card mt-5">
               <div class="card-body">
                 <h3 class="card-title text-center mb-4">Написать тикет</h3>
-                <form id="telegram-form">
+                <form action="/ticket/send" method="POST" id="telegram-form">
                   <div class="form-group">
                     <label for="message"
                       >Опишите вашу проблему/Нововведение</label
@@ -82,30 +82,23 @@
           .getElementById("telegram-form")
           .addEventListener("submit", function (event) {
             event.preventDefault();
-            var chatid = "<%= tg_group %>";
-            var text = document.getElementById("text").value;
-            otpravka(
-              "<%= tg_token %>",
-              text + ` | Отправлен - <%= userName %> (<%= steamid %>)`,
-              chatid
-            );
-          });
+            var formData = new FormData(this);
 
-        function otpravka(token, text, chatid) {
-          $.ajax({
-            type: "POST",
-            url:
-              "https://api.telegram.org/bot" +
-              token +
-              "/sendMessage?chat_id=" +
-              chatid,
-            data: "parse_mode=HTML&text=" + encodeURIComponent(text),
-            success: function (response) {
-              $("#successModal").modal("show");
-            },
-            error: function (error) {},
+            fetch("/send", {
+              method: "POST",
+              body: formData,
+            })
+              .then((response) => {
+                if (response.ok) {
+                  $("#successModal").modal("show");
+                } else {
+                  // Handle error
+                }
+              })
+              .catch((error) => {
+                // Handle error
+              });
           });
-        }
       </script>
     </main>
 
